syntax = "proto3";
package conf;

option go_package = "im-server/internal/conf;conf";

import "google/protobuf/duration.proto";


message Data {
  message MySql {
    string driver = 1;
    string source = 2;
    int32 max_conn = 3;
    int32 max_idle_conn = 4;
    google.protobuf.Duration max_lifetime = 5;
    int32  batch_size = 6;
  }
  message Redis {
    string addr = 1;
    string username = 2;
    string password = 3;
    int32 db = 4;
    int32 pool = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
    bool is_cluster = 8;
    string key_prefix = 9;
  }
  message LocalCache {
    google.protobuf.Duration expiration = 1;
    google.protobuf.Duration cleanupInterval = 6;
  }
  message RocketMQ {
    repeated string nameServers = 1;
    message Producer {
      string groupName = 1;
    }
    message TxProducer{
      string groupName= 2;
    }
    Producer producer = 2;
    TxProducer txProducer = 3;
  }
  MySql mysql = 1;
  Redis redis = 2;
  string repoSelector =3;
  bool debug = 4; //是否开启debug，数据库可以打印sql语句
  LocalCache localCache = 5;
  RocketMQ rocketMQ = 6;
}
